--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,6 +1,7 @@
 
+/* src\components\App\App.module.css */
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -14,9 +15,12 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 4rem;
 }
 
 .searchBar{
   position: sticky;
   margin: 0 auto;
+  margin-left: 100px;
+  /* z-index: 1000; */
 }
