--- a/src/components/ImageGallery/ImageCard/ImageCard.module.css
+++ b/src/components/ImageGallery/ImageCard/ImageCard.module.css
@@ -1,8 +1,19 @@
 .imgContainer{
-  width: 18rem;
-  height: 15rem;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
+
+   
+    transition: transform 0.3s ease;
 }
 .img{
-  object-fit:cover;
+
+
+  width: 100%;
+
+    height: 100%;
+
+    object-fit: cover;
+
+    /* transition: transform 0.3s ease; */
 }
