--- a/src/components/App/ClearButton/ClearButton.module.css
+++ b/src/components/App/ClearButton/ClearButton.module.css
@@ -7,6 +7,5 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin: 20px auto;
-    
+    margin: 20px 0;
 }
